<resources>
    <!-- Manifest -->
    <string name="app_name">Bike Coop Sign In</string>
    <string name="title_activity_coop_login">Coop Login</string>
    <string name="title_activity_create_coop_account">Register Your Coop</string>
    <string name="title_activity_contact_sign_in">Sign In</string>
    <string name="title_activity_admin">Admin Panel</string>
    <string name="title">Bike Coop Sign In</string>

    <!-- Nav bar -->
    <string name="action_logout">Logout</string>
    <string name="action_sign_in">Sign In</string>
    <string name="action_admin">Stats</string>
    <string name="action_home">Home</string>

    <!-- Admin Activity -->
    <string name="signInListLabel">Sign in list</string>

    <!-- Contact Sign In Activity -->
    <string name="contactNameLabel">My name is: </string>
    <string name="contactPurposeLabel">I\'m here to: </string>
    <string name="radioFixBike">Fix my bike</string>
    <string name="radioVolunteer">Volunteer</string>
    <string name="saferSpaceAgreement">Safer space agreement goes here</string>
    <string name="iAgreeButton">Go</string>
    <string name="error_choose_purpose">Please choose whether you are volunteering or fixing your steed.</string>
    <string name="error_name">Please type your name!</string>
    <string name="dialog_signedin">You\'re all signed in</string>

    <!-- Coop Login Activity -->
    <string name="loginCoopName">Hey Bike Coop, Sign In Here!</string>
    <string name="loginCoopEmail">coop email</string>
    <string name="loginCoopEmailHint">password</string>
    <string name="createCoopAccountButton">or create an account</string>
    <string name="coopLoginButton">sign in</string>

    <!-- Create Coop Account Activity -->
    <string name="coopInfoLabel">Please enter your email and choose a password:</string>
    <string name="coopEmailHint">coop email</string>
    <string name="coopPasswordHint">choose a password</string>
    <string name="coopNameHint">coop name</string>
    <string name="agreementsLabel">Collective agreements:</string>
    <string name="coopAgreementHint">Patrons and volunteers agree to</string>
    <string name="registerButton">Register</string>
    <string name="error_already_registered">This email is already registered.</string>

    <!-- Main Activity -->
    <string name="welcomeMessage">Welcome</string>
    <string name="dataVis">Data Visualization</string>
    <string name="adminPanelButton">Admin Panel</string>

    <!-- Sign In Event -->
    <string name="name">Name</string>
    <string name="role">Vol/Pat/Emp</string>
    <string name="signedInAt">Signed in at:</string>
    <string name="dateTime">DateTime</string>
    <string name="signedOutAt">Signed out at:</string>
    <string name="dateTimeOut">DateTimeOut</string>

    <!-- universal: dialogs -->
    <string name="dialog_oops">Oops!</string>
    <string name="dialog_thanks">Thanks!</string>
    <string name="error_fill_all_fields">Please fill all required fields</string>
    <string name="dialog_registered_coop">You successfully registered your coop.</string>
    <string name="title_activity_data">Data</string>
    <string name="error_there_was_an_exception">"There was an error: "</string>

    <!-- Parse -->
    <string name="parseKey">yC8wNP8Eg1bcqyLWPDjzA2ARgJupvx2IGf6DwUUf</string>
    <string name="parseValue">QnQDJIngGbgE9uvseC5HNljZp9nfpBfTCdcePW8i</string>


</resources>
