<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context="com.epicodus.signin2.ui.DataActivity">
    <item
        android:id="@+id/action_sign_in"
        android:title="@string/action_sign_in"
        android:orderInCategory="100"
        android:icon="@drawable/ic_add_action"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_admin"
        android:title="@string/action_admin"
        android:orderInCategory="100"
        android:icon="@drawable/ic_stats_action"
        app:showAsAction="ifRoom" />

    <item android:id="@+id/action_logout" android:title="@string/action_logout"
          android:orderInCategory="100" app:showAsAction="never" />
</menu>
