<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.epicodus.signin2.ui.CoopLoginActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/loginCoopName"
        android:id="@+id/mainHeaderTextView"
        android:textSize="45sp"
        android:gravity="center_horizontal"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="31dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/coopEmailEditText"
        android:nextFocusDown="@+id/coopPasswordEditText"
        android:hint="@string/loginCoopEmail"
        android:inputType="textEmailAddress"
        android:layout_below="@+id/mainHeaderTextView"
        android:layout_marginTop="58dp"
        android:layout_alignLeft="@+id/coopPasswordEditText"
        android:layout_alignStart="@+id/coopPasswordEditText"
        android:layout_alignRight="@+id/coopPasswordEditText"
        android:layout_alignEnd="@+id/coopPasswordEditText" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/coopPasswordEditText"
        android:nextFocusDown="@+id/coopSignInButton"
        android:hint="@string/loginCoopEmailHint"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/coopLoginButton"
        android:id="@+id/coopSignInButton"
        android:nextFocusDown="@+id/coopCreateAccountButton"
        android:layout_above="@+id/coopCreateAccountButton"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="78dp"
        android:background="@drawable/button_raised" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="?android:attr/borderlessButtonStyle"
        android:text="@string/createCoopAccountButton"
        android:id="@+id/coopCreateAccountButton"
        android:nextFocusDown="@+id/coopEmailEditText"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:background="@android:color/background_light" />

</RelativeLayout>
